--- a/index.html
+++ b/index.html
@@ -4,29 +4,43 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/8b6551462d.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 
 <body>
 
-    <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+    <div class="navbar navbar-expand-sm navbar-light navbar-alura">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" />
+                <img src="images/Vector.png" />
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto">
-                </ul>
-            </div>
         </div>
     </div>
-    <div class="container">
-        <h1>Encriptador</h1>
+    <div class="container-text">
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card" style="background: #e5e5e5;">
+                    <div class="card-body">
+                        <h1>Encriptador</h1>
+                        <input type="text">
+                        <h5>Solo letras minúsculas y sin acentos</h5><br>
+                        <button class="encriptar">Encriptar</button>
+                        <button class="desencriptar">Desencriptar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h3>Ningún mensaje fue encontrado</h3>
+                        <p>Ingresa el texto que desees encriptar o desencriptar.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <div class="footer">
@@ -38,7 +52,7 @@
             <a href="#"><i class="fab fa-linkedin"></i></a>
         </div>
         <div class="footer-copyright">
-            This footer is made with <i class="fas fa-heart"></i> at Le Wagon
+            This footer is made with <i class="fas fa-heart"></i> at One
         </div>
     </div>
 
