--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+    <title>Encriptador de Texto</title>
     <script src="https://kit.fontawesome.com/8b6551462d.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -18,24 +18,28 @@
             </a>
         </div>
     </div>
+    <section>
+
+    </section>
+
     <div class="container-text">
         <div class="row">
-            <div class="col-sm-6">
-                <div class="card" style="background: #e5e5e5;">
+            <div class="col-sm-8">
+                <div class="card border-light" style="background: #e5e5e5;">
                     <div class="card-body">
-                        <h1>Encriptador</h1>
-                        <input type="text">
-                        <h5>Solo letras minúsculas y sin acentos</h5><br>
-                        <button class="encriptar">Encriptar</button>
-                        <button class="desencriptar">Desencriptar</button>
+                        <textarea type="text" class="input-text" cols="40" rows="4" placeholder="Ingrese el texto aquí"></textarea>
+                        <h6>Solo letras minúsculas y sin acentos</h6><br>
+                        <button type="button" onclick="btnencriptar()">Encriptar</button>
+                        <button type="button" class="desencriptar">Desencriptar</button>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-4">
                 <div class="card">
                     <div class="card-body">
-                        <h3>Ningún mensaje fue encontrado</h3>
-                        <p>Ingresa el texto que desees encriptar o desencriptar.</p>
+                        <img src="images/Muñeco.png" alt="">
+                        <h5>Ningún mensaje fue encontrado</h5>
+                        <textarea type="text" class="input-text-area" placeholder="Ingresa el texto que desees encriptar o desencriptar" cols="24" rows="3"></textarea>
                     </div>
                 </div>
             </div>
@@ -43,21 +47,23 @@
 
     </div>
 
-    <div class="footer">
-        <div class="footer-links">
-            <a href="#"><i class="fab fa-github"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
+    <footer class="d-flex flex-wrap justify-content-between align-items-center pb-3 my-4 border-top">
+        <div class="col-md-4 d-flex align-items-center">
+            <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+                <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+            </a>
+            <span class="text-muted">© 2021 Company, Inc</span>
         </div>
-        <div class="footer-copyright">
-            This footer is made with <i class="fas fa-heart"></i> at One
-        </div>
-    </div>
 
+        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
+            <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
+            <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+        </ul>
+    </footer>
 
+    <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
+
 
 </html>
