Add descencriptar function

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     <div class="card-body">
                         <textarea type="text" class="input-text" cols="40" rows="4" placeholder="Ingrese el texto aquí"></textarea>
                         <h6>Solo letras minúsculas y sin acentos</h6><br>
-                        <button type="button" onclick="btnencriptar()">Encriptar</button>
-                        <button type="button" class="desencriptar">Desencriptar</button>
+                        <button type="button" class="encriptar" onclick="btnencriptar()">Encriptar</button>
+                        <button type="button" class="desencriptar" onclick="btndesencriptar()">Desencriptar</button>
                     </div>
                 </div>
             </div>
@@ -52,7 +52,7 @@
             <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
                 <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
             </a>
-            <span class="text-muted">© 2021 Company, Inc</span>
+            <span class="text-muted">© Katherine Cornejo</span>
         </div>
 
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
