--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Encriptador de Texto</title>
     <script src="https://kit.fontawesome.com/8b6551462d.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/8b6551462d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
@@ -25,7 +26,7 @@
     <div class="container-text">
         <div class="row">
             <div class="col-sm-8">
-                <div class="card border-light" style="background: #e5e5e5;">
+                <div class="card border-light text-center" style="background: #e5e5e5;">
                     <div class="card-body">
                         <textarea type="text" class="input-text" cols="40" rows="4" placeholder="Ingrese el texto aquí"></textarea>
                         <h6>Solo letras minúsculas y sin acentos</h6><br>
@@ -35,7 +36,7 @@
                 </div>
             </div>
             <div class="col-sm-4">
-                <div class="card">
+                <div class="card pt-5 mt-2">
                     <div class="card-body">
                         <img src="images/Muñeco.png" alt="">
                         <h5>Ningún mensaje fue encontrado</h5>
@@ -47,19 +48,12 @@
 
     </div>
 
-    <footer class="d-flex flex-wrap justify-content-between align-items-center pb-3 my-4 border-top">
-        <div class="col-md-4 d-flex align-items-center">
-            <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-                <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
-            </a>
-            <span class="text-muted">© Katherine Cornejo</span>
+    <footer class=" navbar-fixed-bottom navbar-light d-flex flex-wrap justify-content-between align-items-center pb-3 border-top" style="background-color: lightblue;">
+        <div class="container">
+            <div class="col-md-4 d-flex align-items-center">
+                <span class="text-muted">© Katherine Cornejo</span>
+            </div>
         </div>
-
-        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-            <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
-            <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
-            <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-        </ul>
     </footer>
 
     <script src="script.js"></script>
